# flask-boilerplate

./: .dockerignore  Dockerfile  Makefile  app.py  docker-compose.yml  pyproject.toml
tests/: test_flask_boilerplate.py
